--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Module2-Assignment[</title>
+ <link rel="stylesheet" href="module2-solution/index.css">
+</head>
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-sm-6">Col 1</div>
+            <div class="col-md-4 col-sm-6">Col 2</div>
+            <div class="col-md-4 col-sm-6">Col 3</div>
+        </div>
 
+
+        <div class="row">
+            <div class="col-md-4 col-sm-6">Col 1</div>
+            <div class="col-md-4 col-sm-6">Col 2</div>
+            <div class="col-md-4 col-sm-6">Col 3</div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-6">Col 1</div>
+            <div class="col-xs-6">Col 2</div>
+            <div class="col-xs-6">Col 3</div>
+        </div>
+    </div>
+
+</body>
+</html>
